# MyDjangoProject

./: .env.template  .gitignore  Dockerfile  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml  requirements.txt
mysite/blogapp/: admin.py  models.py  urls.py  views.py
mysite/blogapp/migrations/: 0001_initial.py
mysite/blogapp/templates/blogapp/: article_list.html
mysite/locale/en/LC_MESSAGES/: django.po
mysite/locale/ru/LC_MESSAGES/: django.po
mysite/myapiapp/: serializers.py  views.py
mysite/myauth/: forms.py  models.py  tests.py  urls.py  views.py
mysite/myauth/management/commands/: bind_user.py
mysite/myauth/migrations/: 0001_initial.py  0002_profile_avatar.py  0003_alter_profile_user.py
mysite/myauth/templates/myauth/: about-me.html  login.html  users.html
mysite/mysite/: settings.py  urls.py
mysite/newsapp/: admin.py  feeds.py  models.py  sitemap.py  urls.py  views.py
mysite/newsapp/fixtures/: housing_type.json  number_of_rooms.json
mysite/newsapp/migrations/: 0001_initial.py  0002_alter_housing_options_alter_housingtype_options_and_more.py  0003_news_description_news_published_at_and_more.py
mysite/newsapp/templates/newsapp/: about_us.html  contacts.html  housing_list.html  news_detail.html  news_list.html
mysite/shopapp/: forms.py  models.py  serializers.py  tests.py  urls.py  views.py
mysite/shopapp/fixtures/: orders-fixture.json  products-fixture.json  users-fixture.json
mysite/shopapp/migrations/: 0007_alter_product_options_product_created_by.py  0008_alter_order_options_alter_product_options.py
(+14 files in other folders)
