[tool.poetry]
name = "django-prod"
version = "0.1.0"
description = ""
authors = ["Denezhkin Vladimir <vova.denezhkin.98@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
django-rest-framework = "^0.1.0"
django = "4.1.7"
djangorestframework = "^3.14.0"
django-filter = "^23.2"
django-debug-toolbar = "^4.1.0"
pillow = "^9.5.0"
pyyaml = "^6.0"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
